--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Assets/css/bootstrap.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css
+    ">
     <title>Weather Dashboard</title>
 </head>
-<body class: navbar navbar-default navbar-fixed-top >
-    <div class="container">
-        <a class="navbar-brand">Weather Dashboard</a>
-    </div>
-    <header>
-        <nav></nav>
-    </header>
-
-
+<body>
     
 </body>
 </html>
