--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <aside id= "searchBox" class= col-3>
         <input type="text" id="the-input" placeholder="Atlanta">
         <button type ="submit" class="primary-btn" id= "search-button"> Search</button>
-        <div style ="justify-self: left; padding-top: 20px; flex-wrap: wrap; flex-direction: column" id="user-search-buttons"></div>
+        <div style ="justify-self: left; padding-top: 20px; flex-wrap: wrap; flex-direction: column" id="search-history"></div>
     </aside>
     <div class= "col-9 md-6">
         <div id= "today" class= "container px-5px py-5px">
