--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     </div>
 </div>
 </div>
-<script src=""></script>
+<script src="./Assets/js/script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     
 </body>
