--- a/index.html
+++ b/index.html
@@ -1,115 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css
-    ">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="./styles/jass.css" />
     <title>Weather Dashboard</title>
-</head>
-<body class ="container -p">
-    <div class="row">
-        <header class="col">  
-    <h1 class="display-3">Weather Dashboard</h1>  
-</header>
-</div>
-<div class ="row">
-    <aside id= "searchBox" class= col-3>
-        <input type="text" id="the-input" placeholder="Atlanta">
-        <button type ="submit" class="primary-btn" id= "search-button"> Search</button>
-        <div style ="justify-self: left; padding-top: 20px; flex-wrap: wrap; flex-direction: column" id="search-history"></div>
-    </aside>
-    <div class= "col-9 md-6">
-        <div id= "today" class= "container px-5px py-5px">
-            <div class="jumbotron">
-                <h1 id="name"></h1>
-                <div id="date"></div>
-                <img id="conditions" />
-                <div id="temp"></div>
-                <div id="humidity"></div>
-                <div id="windspeed"></div>
-                <div id="uvIndex"></div>
+  </head>
+
+  <body>
+    <header
+      class="container-fluid text-center text-white bg-dark p-2 weather-header"
+    >
+      <h1>Weather Dashboard</h1>
+    </header>
+
+    <!-- max-width for ultra wide resolutions -->
+    <div class="container-fluid" style="max-width: 1400px">
+      <div class="row">
+        <aside class="col-lg-3 pb-3">
+          <h2 id="form-heading" class="mt-1 h3 form-label">
+            Search for a City:
+          </h2>
+          <form id="search-form" class="form">
+            <div class="form-inline form-group">
+              <div class="input-group">
+                <input
+                  class="form-input weather-search"
+                  type="text"
+                  id="search-input"
+                  placeholder="San Diego"
+                  aria-labelledby="form-heading"
+                  aria-controls="today forecast"
+                />
+                <div class="input-group-append">
+                  <button
+                    type="submit"
+                    class="btn search-button"
+                    id="search-button"
+                    aria-label="submit search"
+                  >
+                    Search
+                  </button>
+                  <hr class="hr weather-hr" />
+                </div>
+              </div>
+            </div>
+          </form>
+          <div class="list-group" id="history"></div>
+        </aside>
+
+        <div class="col-lg-9 pb-3">
+          <section
+            id="today"
+            class="mt-3"
+            role="region"
+            aria-live="polite"
+          ></section>
+          <section
+            id="forecast"
+            class="row mt-3"
+            role="region"
+            aria-live="polite"
+          ></section>
         </div>
+      </div>
     </div>
-    <div class="container">
-        <section class= "row">
-            <div class="col-12 col-md-9">
-                <h2>5-Day Forecast</h2>
-            </div>
-        </section>
-        <section class ="row">
-            <div class= "col mb-3">
-                <div class= "card">
-                    <h3 class="card-header">
-                        Day 1
-                    </h3>
-                    <div class ="card-body">
-                        <img class="card-text"/>
-                        <p class ="card-text"> Temp: </p>
-                        <p class ="card-text"> Wind: </p>
-                        <p class ="card-text"> Humidity: </p>
-                    </div>
-                </div>
-            </div>
-            <div class= "col mb-3">
-                <div class= "card">
-                    <h3 class="card-header">
-                        Day 2
-                    </h3>
-                    <div class ="card-body">
-                        <img class="card-text"/>
-                        <p class ="card-text"> Temp: </p>
-                        <p class ="card-text"> Wind: </p>
-                        <p class ="card-text"> Humidity: </p>
-                    </div>
-                </div>
-            </div>
-            <div class= "col mb-3">
-                <div class= "card">
-                    <h3 class="card-header">
-                        Day 3
-                    </h3>
-                    <div class ="card-body">
-                        <img class="card-text"/>
-                        <p class ="card-text"> Temp: </p>
-                        <p class ="card-text"> Wind: </p>
-                        <p class ="card-text"> Humidity: </p>
-                    </div>
-                </div>
-            </div>
-            <div class= "col mb-3">
-                <div class= "card">
-                    <h3 class="card-header">
-                        Day 4
-                    </h3>
-                    <div class ="card-body">
-                        <img class="card-text"/>
-                        <p class ="card-text"> Temp: </p>
-                        <p class ="card-text"> Wind: </p>
-                        <p class ="card-text"> Humidity: </p>
-                    </div>
-                </div>
-            </div>
-            <div class= "col mb-3">
-                <div class= "card">
-                    <h3 class="card-header">
-                        Day 5
-                    </h3>
-                    <div class ="card-body">
-                        <img class="card-text"/>
-                        <p class ="card-text"> Temp: </p>
-                        <p class ="card-text"> Wind: </p>
-                        <p class ="card-text"> Humidity: </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </div>
-</div>
-</div>
-<script src="./Assets/js/script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
-</body>
+
+    <!-- use day.js to easily format dates -->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"
+      integrity="sha512-0fcCRl828lBlrSCa8QJY51mtNqTcHxabaXVLPgw/jPA5Nutujh6CbTdDgRzl9aSPYW/uuE7c4SffFUQFBAy6lg=="
+      crossorigin="anonymous"
+    ></script>
+    <script 
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/utc.min.js" 
+      integrity="sha512-m00bfmYnAl3plEBlQfeQUhw/U2uvmw29V2+jxSWpAjankMWS+zAsjezbKWDEJNXqWq9o9qQZSOiA2RKDpa4D5w==" 
+      crossorigin="anonymous"
+    ></script>
+    <script 
+      src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/plugin/timezone.min.js" 
+      integrity="sha512-pslqxxHAYPCxaSeFSmXXxDkLejD5dbFVC66aiVq0z4v7VTJBU+wqcG1OpNh4p3MjS2D6NCwz/H2QmSc7dXxryg==" 
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
+  </body>
 </html>
